--- a/src/templates/project_logs.html
+++ b/src/templates/project_logs.html
@@ -1,3 +1,7 @@
-<perfect-scrollbar class="log scroller full-height" scroll-glue>
+<perfect-scrollbar ng-if="project.runtime.containerLog" class="log scroller flex-full-height" scroll-glue>
 	<pre>{{project.runtime.containerLog}}</pre>
 </perfect-scrollbar>
+
+<div ng-if="!project.runtime.containerLog" class="text-empty">
+	<span>{{'The logs are empty'|translate}}</span>
+</div>
