--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -11,12 +11,12 @@
 						</div>
 						<div class="panel-footer">
 							<span class="pull-right">
-								<a ui-sref="project.logs({id: project.id})" title="{{'Log'|translate}}">
-									<i class="fa fa-th-list"></i>
-									<span>{{'Log'|translate}}</span>
+								<a ui-sref="project.logs({id: project.id})" title="{{'Logs'|translate}}">
+									<i class="stream stream-window-list"></i>
+									<span>{{'Logs'|translate}}</span>
 								</a>
 								<a ui-sref="project.container({id: project.id})" title="{{'Container'|translate}}">
-									<i class="fa fa-align-justify fa-rotate-90"></i>
+									<i class="stream stream-box"></i>
 									<span>{{'Container'|translate}}</span>
 								</a>
 								<a ui-sref="project.image({id: project.id})" title="{{'Image'|translate}}">
@@ -24,7 +24,7 @@
 									<span>{{'Image'|translate}}</span>
 								</a>
 								<a ui-sref="project.configuration({id: project.id})" title="{{'Configuration'|translate}}">
-									<i class="fa fa-gear"></i>
+									<i class="stream stream-cog"></i>
 									<span>{{'Configuration'|translate}}</span>
 								</a>
 							</span>
