--- a/src/templates/project_container.html
+++ b/src/templates/project_container.html
@@ -1,4 +1,4 @@
-<perfect-scrollbar ng-if="project.runtime.docker.container" class="scroller flex-full-height">
+<perfect-scrollbar ng-if="project.runtime.docker.container" class="scroller full-height">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12">
