--- a/src/templates/project_logs.html
+++ b/src/templates/project_logs.html
@@ -1,4 +1,4 @@
-<perfect-scrollbar ng-if="project.runtime.containerLog" class="log scroller flex-full-height" scroll-glue>
+<perfect-scrollbar ng-if="project.runtime.containerLog" class="log scroller full-height" scroll-glue>
 	<pre>{{project.runtime.containerLog}}</pre>
 </perfect-scrollbar>
 
