--- a/src/css/tab.css
+++ b/src/css/tab.css
@@ -1,9 +1,3 @@
-.tab {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-}
-
 .nav-tabs > li {
 	border: none;
 	border-bottom: 3px solid transparent;
@@ -29,13 +23,15 @@
 	border: none;
 }
 
-.tab-pane {
-	color: #333;
-}
 
+.tab > .nav-tabs {
+	height: 45px;
+}
 
 .tab > .tab-content {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
 }
+
+.tab > .tab-content.full-height {
+	height: calc(100% - 45px)
+}
+
