--- a/src/templates/project_image.html
+++ b/src/templates/project_image.html
@@ -1,4 +1,4 @@
-<perfect-scrollbar class="scroller flex-full-height">
+<perfect-scrollbar class="scroller full-height">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12">
