Updated docker processes handling

--- a/src/templates/project_logs.html
+++ b/src/templates/project_logs.html
@@ -1,7 +1,7 @@
-<perfect-scrollbar ng-if="project.runtime.containerLog" class="log scroller full-height" scroll-glue>
-	<pre>{{project.runtime.containerLog}}</pre>
+<perfect-scrollbar ng-if="project.runtime.docker.container.log" class="log scroller full-height" scroll-glue>
+	<pre>{{project.runtime.docker.container.log}}</pre>
 </perfect-scrollbar>
 
-<div ng-if="!project.runtime.containerLog" class="text-empty">
+<div ng-if="!project.runtime.docker.container.log" class="text-empty">
 	<span>{{'The logs are empty'|translate}}</span>
 </div>
