--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -7,8 +7,8 @@
 					<h4>
 						{{project.title}}
 						<small>{{project.id}}</small>
-						<span class="label label-primary" ng-if="project.runtime.docker.container">{{'Running'|translate}}</span>
-						<span class="label label-warning" ng-if="!project.runtime.docker.container">{{'Stopped'|translate}}</span>
+						<span class="label label-primary" ng-if="project.runtime.docker.container.infos.State.Running">{{'Running'|translate}}</span>
+						<span class="label label-warning" ng-if="!project.runtime.docker.container.infos.State.Running">{{'Stopped'|translate}}</span>
 					</h4>
 				</div>
 			</div>
